--- a/css/main.css
+++ b/css/main.css
@@ -128,6 +128,18 @@ header .nav>li { position:initial;}
 #type-content #industrial.active:before { content:''; display:inline-block; border-left:20px solid transparent; border-right:20px solid transparent; border-bottom:20px solid #fff; position:relative; top:-39px; left:195px;}
 #type-content #passenger.active:before { content:''; display:inline-block; border-left:20px solid transparent; border-right:20px solid transparent; border-bottom:20px solid #fff; position:relative; top:-39px; left:390px;}
 
+#promo_btn_dealer:first-child { width: 100%;display: block; text-align: center; background-color:#ccc; color:#000; padding:8px; padding-bottom:8px; max-width:200px; font-size:16px; margin:0 auto; border-radius:4px;}
+#promo_btn_dealer:first-child:hover { background-color:#999; text-decoration:none;}
+#promo_btn_dealer:not(:first-child) { color:#5a7002; background:transparent;}
+.col-centered{
+    float: none;
+    margin: 0 auto;
+}
+.promo_spacer {margin-top: 19px}
+#promo_btn_dn {
+    margin-top: -40px;
+    z-index: 99;
+}
 
 /* Overlay */
 .main-overlay { position:fixed; top:0; left:0; width:100%; height:100%; z-index:1000; background-color:rgba(0,0,0,0.8); transition:0.35s; opacity:0; display:none;}
