--- a/css/main.css
+++ b/css/main.css
@@ -100,7 +100,9 @@ header .nav>li { position:initial;}
 #slider .slick-dots li button:before { color:#fff;}
 #slider .slick-dots li.slick-active button:before { color:#a0c800;}
 
-.homepage-carousel .slick-dots {width:30px; height:30px}
+/*.homepage-carousel .slick-dots {width:30px; height:30px}*/
+.homepage-carousel .slick-dots li button:before {font-size: 16px}
+.homepage-carousel .slick-dots li {width: 30px}
 
 /* Type Bar */
 #type-bar { padding:30px 0 30px; background-image:url('gfx/bg-type_bar.jpg'); background-position:center;}
@@ -140,6 +142,42 @@ header .nav>li { position:initial;}
     margin-top: -40px;
     z-index: 99;
 }
+.darken_img_on_hover {
+    /*background: url("../img/promo/coupon_info_home_page.png");*/
+    /*position: relative;*/
+    /*height: 300px;*/
+    /*background-size: cover;*/
+    /*padding-left: 5px;*/
+    /*text-align: center;*/
+}
+.darken_img_on_hover:hover > .darken_img_on_hover_overlay {
+    width: 95%;
+    height: 100%;
+    position: absolute;
+    background-color: #000;
+    opacity: 0.7;
+    -moz-transition: all 0.5s;
+    -webkit-transition: all 0.5s;
+    transition: all 0.5s;
+}
+.darken_img_on_hover .darken_img_on_hover_btn {
+    position: absolute;
+    left:15%;
+    top:35%;
+    display: none;
+
+}
+.darken_img_on_hover a {
+    color: #fff;
+    font-size: 36px;
+    text-shadow: 2px 2px 2px #000;
+    text-decoration: underline;
+    padding: 50px;
+}
+.darken_img_on_hover:hover .darken_img_on_hover_btn {
+    display: block;
+}
+
 
 /* Overlay */
 .main-overlay { position:fixed; top:0; left:0; width:100%; height:100%; z-index:1000; background-color:rgba(0,0,0,0.8); transition:0.35s; opacity:0; display:none;}
@@ -576,3 +614,26 @@ footer #dealer-directory-button:hover { background-color:#445500; color:#fff;}
     #type-content #passenger.active:before { left:18.5%;}
 
 }
+
+/*zz couponPromo*/
+@media (min-width:1296px){
+    #container_banner_promo_page {
+        width: 1296px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        position: relative;
+    }
+
+}
+#section_features_promo {
+    /*padding:20px 0; */
+    /*background-image: url(gfx/bg-features.jpg); */
+    /*background-position:center; */
+    /*color:#000; */
+    /*border-top:3px solid #a0c800; */
+    /*border-bottom:3px solid #a0c800; */
+    /*background-size:cover;*/
+}
+#section_features_promo p { font-size:16px; color:#000; text-shadow:1px 1px 5px #ccc; margin-top:15px; text-align:center;}
+#section_features_promo h4 { color:#87ad4a; margin-top:30px; padding-bottom:5px; border-bottom:1px solid #4e7fb9; font-size:24px;}
