--- a/css/main.css
+++ b/css/main.css
@@ -143,41 +143,37 @@ header .nav>li { position:initial;}
     z-index: 99;
 }
 .darken_img_on_hover {
-    /*background: url("../img/promo/coupon_info_home_page.png");*/
-    /*position: relative;*/
-    /*height: 300px;*/
-    /*background-size: cover;*/
-    /*padding-left: 5px;*/
-    /*text-align: center;*/
 }
-.darken_img_on_hover:hover > .darken_img_on_hover_overlay {
-    width: 95%;
-    height: 100%;
-    position: absolute;
-    background-color: #000;
-    opacity: 0.7;
-    -moz-transition: all 0.5s;
-    -webkit-transition: all 0.5s;
-    transition: all 0.5s;
+.darken_img_on_hover #dioh_dark70 {
+    display: none;
+}
+.darken_img_on_hover:hover #dioh_original {
+    display: none;
+}
+.darken_img_on_hover:hover #dioh_dark70 {
+    display: block;
 }
 .darken_img_on_hover .darken_img_on_hover_btn {
     position: absolute;
-    left:15%;
-    top:35%;
+    left:63.5%;
+    top:75%;
     display: none;
-
+    /*background-color: #44aaee;*/
+    opacity: 50%;
 }
 .darken_img_on_hover a {
     color: #fff;
     font-size: 36px;
     text-shadow: 2px 2px 2px #000;
     text-decoration: underline;
-    padding: 50px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-right: 80px;
+    padding-left: 80px;
 }
 .darken_img_on_hover:hover .darken_img_on_hover_btn {
     display: block;
 }
-
 
 /* Overlay */
 .main-overlay { position:fixed; top:0; left:0; width:100%; height:100%; z-index:1000; background-color:rgba(0,0,0,0.8); transition:0.35s; opacity:0; display:none;}
